Version 0.5+
	* Add subspace projection kNN
	* Export ``pdist`` in milk namespace
	* Add Eigen to source distribution
	* Add measures.curves.roc
	* Add ``mds_dists`` function

Version 0.5 2012-11-05 by luispedro
	* Add coordinate-descent based LASSO
	* Add unsupervised.center function
	* Make zscore work with NaNs (by ignoring them)
	* Propagate apply_many calls through transformers
	* Much faster SVM classification with means a much faster defaultlearner()
	[measured 2.5x speedup on yeast dataset!]

Version 0.4.3 2012-09-19 by luispedro
	* Add select_n_best & rank_corr to featureselection
	* Add Euclidean MDS
	* Add tree multi-class strategy
	* Fix adaboost with boolean weak learners (issue #6, reported by audy
	(Austin Richardson))
	* Add ``axis`` arguments to zscore()

Version 0.4.2 2012-01-16 by luispedro
	* Make defaultlearner able to take extra argumentsaudy (Austin Richardson)
	* Make ctransforms_model a supervised_model (adds apply_many)
	* Add expanded argument to defaultlearner
	* Fix corner case in SDA
	* Fix repeated_kmeans
	* Fix parallel gridminimise on Windows
	* Add multi_label argument to normaliselabels
	* Add multi_label argument to nfoldcrossvalidation.foldgenerator
	* Do not fork a process in gridminimise if nprocs == 1 (makes for easier
	debugging, at the cost of slightly more complex code).
	* Add milk.supervised.multi_label
	* Fix ext.jugparallel when features is a Task
	* Add milk.measures.bayesian_significance

Version 0.4.1 2011-08-25 by luispedro
	* Fix important bug in multi-process gridsearch

Version 0.4.0 2011-08-24 by luispedro
	* Use multiprocessing to take advantage of multi core machines (off by
	default).
	* Add perceptron learner
	* Set random seed in random forest learner
	* Add warning to milk/__init__.py if import fails
	* Add return value to ``gridminimise``
	* Set random seed in ``precluster_learner``
	* Implemented Error-Correcting Output Codes for reduction of multi-class
	to binary (including probability estimation)