@@ -10,10 +10,13 @@ except ImportError:
     is necessary for some of the testing.''')
 
 
-def run():
+def run(verbose=False):
     import nose
     from os import path
     currentdir = path.dirname(__file__)
     updir = path.join(currentdir, '..')
-    nose.run('milk', argv=['', '--exe', '-w', updir])
+    argv = ['', '--exe', '-w', updir]
+    if verbose:
+        argv.append('--verbose')
+    nose.run('milk', argv=argv)
 
